--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <img class="grid-gallery__image" src="img/port-5.jpg">
                 </a>
                 <a class="grid-gallery__item" href="#">
-                    <img class="grid-gallery__image" src="img/port-6.png">
+                    <img class="grid-gallery__image" src="img/port-6.jpg">
                 </a>
                 <a class="grid-gallery__item" href="#">
                     <img class="grid-gallery__image" src="img/port-7.jpg">
