--- a/index.html
+++ b/index.html
@@ -91,53 +91,60 @@
 
 
             <div class="grid-gallery">
-                <a class="grid-gallery__item" href="#">
-                    <img class="grid-gallery__image" src="img/port-1.jpg">
-                </a>
-                <a class="grid-gallery__item" href="#">
-                    <img class="grid-gallery__image" src="img/port-2.jpg">
-                </a>
-                <a class="grid-gallery__item" href="#">
-                    <img class="grid-gallery__image" src="img/port-3.jpg">
-                </a>
-                <a class="grid-gallery__item" href="#">
-                    <img class="grid-gallery__image" src="img/port-4.jpg">
-                </a>
-                <a class="grid-gallery__item" href="#">
-                    <img class="grid-gallery__image" src="img/port-5.jpg">
-                </a>
-                <a class="grid-gallery__item" href="#">
-                    <img class="grid-gallery__image" src="img/port-6.jpg">
-                </a>
-                <a class="grid-gallery__item" href="#">
-                    <img class="grid-gallery__image" src="img/port-7.jpg">
-                </a>
+                
+             <div class="grid-gallery__item " href=""> 
+                    <img class="grid-gallery__image myImg" alt="Retrato"  src="img/port-1.jpg">
+        
+             </div>
+                <div class="grid-gallery__item" href="#">
+                    <img class="grid-gallery__image myImg" alt="Fotografia Producto"  src="img/port-2.jpg">
+                </div>
+                <div class="grid-gallery__item" href="#">
+                    <img class="grid-gallery__image myImg" src="img/port-3.jpg">
+                </div>
+                <div class="grid-gallery__item" href="#">
+                    <img class="grid-gallery__image myImg" src="img/port-4.jpg">
+                </div>
+                <div class="grid-gallery__item" href="#">
+                    <img class="grid-gallery__image myImg" src="img/port-5.jpg">
+                </div>
+                <div class="grid-gallery__item" href="#">
+                    <img class="grid-gallery__image myImg" src="img/port-6.jpg">
+                </div>
+                <div class="grid-gallery__item" href="#">
+                    <img class="grid-gallery__image myImg" src="img/port-7.jpg">
+                </div>
 
-                <a class="grid-gallery__item" href="#">
-                    <img class="grid-gallery__image" src="img/port-8.jpg">
-                </a>
-                <a class="grid-gallery__item" href="#">
-                    <img class="grid-gallery__image" src="img/port-12.jpg">
-                </a>
+                <div class="grid-gallery__item" href="#">
+                    <img class="grid-gallery__image myImg" src="img/port-8.jpg">
+                </div>
+                <div class="grid-gallery__item" href="#">
+                    <img class="grid-gallery__image myImg" src="img/port-12.jpg">
+                </div>
 
-                <a class="grid-gallery__item" href="#">
-                    <img class="grid-gallery__image" src="img/port-14.jpg">
-                </a>
+                <div class="grid-gallery__item" href="#">
+                    <img class="grid-gallery__image myImg" src="img/port-14.jpg">
+                </div>
 
-                <a class="grid-gallery__item" href="#">
-                    <img class="grid-gallery__image" src="img/port-9.jpg">
-                </a>
-                <a class="grid-gallery__item" href="#">
-                    <img class="grid-gallery__image" src="img/port-10.jpg">
-                </a>
-                <a class="grid-gallery__item" href="#">
-                    <img class="grid-gallery__image" src="img/port-13.jpg">
-                </a>
+                <div class="grid-gallery__item" href="#">
+                    <img class="grid-gallery__image myImg" src="img/port-9.jpg">
+                </div>
+                <div class="grid-gallery__item" href="#">
+                    <img class="grid-gallery__image myImg" src="img/port-10.jpg">
+                </div>
+                <div class="grid-gallery__item" href="#">
+                    <img class="grid-gallery__image myImg" src="img/port-13.jpg">
+                </div>
 
 
-                <a class="grid-gallery__item" href="#">
-                    <img class="grid-gallery__image" src="img/port-11.jpg">
-                </a>
+                <div class="grid-gallery__item" href="#">
+                    <img class="grid-gallery__image myImg" src="img/port-11.jpg">
+                </div>
+                <div id="myModal" class="modal">
+                    <span class="close" onclick="closeModal()" >&times;</span>
+                    <img class="modal-content" id="img01">
+                    <div id="caption"></div>
+                  </div>
 
 
             </div>
@@ -186,6 +193,7 @@
         </footer>
 
     </main>
+    <script src="js/portafolio.js"></script>
 
 </body>
 
