--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
             <div class="grid-gallery">
                 
              <div class="grid-gallery__item " href=""> 
-                    <img class="grid-gallery__image myImg" alt="Retrato"  src="img/port-1.jpg">
+                    <img class="grid-gallery__image myImg" alt=""  src="img/port-1.jpg">
         
              </div>
                 <div class="grid-gallery__item" href="#">
-                    <img class="grid-gallery__image myImg" alt="Fotografia Producto"  src="img/port-2.jpg">
+                    <img class="grid-gallery__image myImg" alt=""  src="img/port-2.jpg">
                 </div>
                 <div class="grid-gallery__item" href="#">
                     <img class="grid-gallery__image myImg" src="img/port-3.jpg">
